[gd_scene load_steps=37 format=2]

[ext_resource path="res://Enemies/players red x1.png" type="Texture" id=1]
[ext_resource path="res://Hitboxes and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=3]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hitboxes and Hurtboxes/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://SoftCollision.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/Droid.gd" type="Script" id=8]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=9]

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 0, 384, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 32, 384, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 64, 384, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 96, 384, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 128, 384, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 160, 384, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 192, 384, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 0, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 32, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 0, 320, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 32, 320, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 64, 320, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 96, 320, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 0, 352, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 32, 352, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 64, 352, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 96, 352, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 320, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 32, 320, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 64, 320, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 96, 320, 32, 32 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=8]
radius = 5.0
height = 0.0

[sub_resource type="CapsuleShape2D" id=9]
radius = 6.0
height = 2.0

[sub_resource type="CircleShape2D" id=10]
radius = 55.0364

[sub_resource type="CapsuleShape2D" id=11]
radius = 3.52941
height = 0.0

[sub_resource type="CapsuleShape2D" id=12]
radius = 6.0
height = 0.0

[node name="Soldier" type="KinematicBody2D"]
scale = Vector2( 1.7, 1.7 )
collision_layer = 17
script = ExtResource( 8 )

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
offset = Vector2( 0, 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1, 47 )
frames = SubResource( 7 )
animation = "idle"
playing = true
offset = Vector2( 1, -60 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.588235 )
scale = Vector2( 1, 1.2 )
shape = SubResource( 8 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -5 )
shape = SubResource( 9 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 3

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 10 )

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 10, -6 )
shape = SubResource( 11 )

[node name="SoftCollision" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, -0.588235 )
shape = SubResource( 12 )

[node name="WanderController" parent="." instance=ExtResource( 9 )]
visible = false

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
